tdf#106116 "Previous Marker" changes selection only when needed

This fixes a hang caused by repeated Shift+F4. Although it seems
a regression from 2af1f5691e8d64afd5246d245d7876b5a2cd5cd8,
the original code of SmEditWindow::SelPrevMark() had been doomed
due to conditional loop depending on obscure signed/unsigned
conversion.

Change-Id: I61f630eec44b285dc1f1c27097acde4b48ed2991
Reviewed-on: https://gerrit.libreoffice.org/34503
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Takeshi Abe <tabe@fixedpoint.jp>
(cherry picked from commit 3efdd925e0ae1c080fbef3f1f79865eb6e172c68)
Reviewed-on: https://gerrit.libreoffice.org/34529
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 9168ae9b0463c27a6d5e4b53a9afbc29ba7e07e9)